--- a/colours.html
+++ b/colours.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>NSW Smash WiiU Discord Name Colours</title>
-		<link rel="stylesheet" src="style.css">
+		<link rel="stylesheet" type="text/css" src="/style.css">
 	</head>
 	<body>
 		<h1>Colour List</h1>
