--- a/colours.html
+++ b/colours.html
@@ -2,7 +2,30 @@
 <html>
 	<head>
 		<title>NSW Smash WiiU Discord Name Colours</title>
-		<link rel="stylesheet" type="text/css" src="/style.css">
+		<!-- <link rel="stylesheet" type="text/css" src="/style.css"> -->
+		<style>
+			body {
+				background-color: #777777;
+				font: Arial;
+				color: #000000;
+			}
+			table {
+				border-collapse: collapse;
+				border: 1px solid black;
+			}
+			td.dark {
+				background-color: #36393E;
+			}
+			td.dark:hover {
+				background-color: #2E3136
+			}
+			td.light {
+				background-color: #FFFFFF;
+			}
+			td.light:hover {
+				background-color: #F3F3F3;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Colour List</h1>
