--- a/colours.html
+++ b/colours.html
@@ -2,16 +2,20 @@
 <html>
 	<head>
 		<title>NSW Smash WiiU Discord Name Colours</title>
-		<!-- <link rel="stylesheet" type="text/css" src="/style.css"> -->
 		<style>
 			body {
 				background-color: #777777;
-				font: Arial;
+				font: "Arial", "Verdana";
 				color: #000000;
 			}
 			table {
 				border-collapse: collapse;
+			}
+			table, th, td {
 				border: 1px solid black;
+			}
+			th, td {
+				padding: 6px;
 			}
 			td.dark {
 				background-color: #36393E;
