--- a/colours.html
+++ b/colours.html
@@ -5,7 +5,7 @@
 		<style>
 			body {
 				background-color: #777777;
-				font: "Arial", "Verdana";
+				font-family: "Arial", "Verdana";
 				color: #000000;
 			}
 			table {
@@ -40,8 +40,10 @@
 				<th>Light Theme</th>
 			</tr>
 			<tr>
-				<td class="dark">hello</td>
-				<td class="light">world</td>
+				<span style="color: #FDEE39">
+				<td class="dark">Colour of MM</td>
+				<td class="light">#FDEE39</td>
+				</span>
 			</tr>
 		</table>
 	</body>
