--- a/colours.html
+++ b/colours.html
@@ -40,10 +40,20 @@
 				<th>Light Theme</th>
 			</tr>
 			<tr>
-				<span style="color: #FDEE39">
-				<td class="dark">Colour of MM</td>
-				<td class="light">#FDEE39</td>
-				</span>
+				<td class="dark"><span style="color: #FDEE39">Colour of MM</span></td>
+				<td class="light"><span style="color: #FDEE39">#FDEE39</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #CC142D">Colour of EVAL</span></td>
+				<td class="light"><span style="color: #CC142D">#CC142D</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #FF9966">Colour of Jeese</span></td>
+				<td class="light"><span style="color: #FF9966">#FF9966</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #3AC7FD">Colour of Saucy</span></td>
+				<td class="light"><span style="color: #3AC7FD">#3AC7FD</span></td>
 			</tr>
 		</table>
 	</body>
