--- a/colours.html
+++ b/colours.html
@@ -4,7 +4,7 @@
 		<title>NSW Smash WiiU Discord Name Colours</title>
 		<style>
 			body {
-				background-color: #777777;
+				background-color: #888888;
 				font-family: "Arial", "Verdana";
 				color: #000000;
 			}
@@ -16,6 +16,7 @@
 			}
 			th, td {
 				padding: 6px;
+				font-weight: bold;
 			}
 			td.dark {
 				background-color: #36393E;
@@ -54,6 +55,190 @@
 			<tr>
 				<td class="dark"><span style="color: #3AC7FD">Colour of Saucy</span></td>
 				<td class="light"><span style="color: #3AC7FD">#3AC7FD</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #000001">Nigerian</span></td>
+				<td class="light"><span style="color: #000001">#000001</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #546E7A">Darkest Grey</span></td>
+				<td class="light"><span style="color: #546E7A">#546E7A</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #607D8B">Dark Grey</span></td>
+				<td class="light"><span style="color: #607D8B">#607D8B</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #7F8C8D">Grey</span></td>
+				<td class="light"><span style="color: #7F8C8D">#7F8C8D</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #979C9F">Light Grey</span></td>
+				<td class="light"><span style="color: #979C9F">#979C9F</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #95A5A6">Lightest Grey</span></td>
+				<td class="light"><span style="color: #95A5A6">#95A5A6</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #B3E86D">Lemon Lime</span></td>
+				<td class="light"><span style="color: #B3E86D">#B3E86D</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #9DF69D">Pale Green</span></td>
+				<td class="light"><span style="color: #9DF69D">#9DF69D</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #11E115">Bright Green</span></td>
+				<td class="light"><span style="color: #11E115">#11E115</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #2ECC7B">Dank Green</span></td>
+				<td class="light"><span style="color: #2ECC7B">#2ECC7B</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #1F8B4C">Dark Green</span></td>
+				<td class="light"><span style="color: #1F8B4C">#1F8B4C</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #11806A">Turqoise</span></td>
+				<td class="light"><span style="color: #11806A">#11806A</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #1ABC9C">Aquamarine 1</span></td>
+				<td class="light"><span style="color: #1ABC9C">#1ABC9C</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #0CBDBE">Aquamarine 2</span></td>
+				<td class="light"><span style="color: #0CBDBE">#0CBDBE</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #206694">Dark Blue</span></td>
+				<td class="light"><span style="color: #206694">#206694</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #3457C7">Dark Blue 2</span></td>
+				<td class="light"><span style="color: #3457C7">#3457C7</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #2E23C4">Gamma Tester</span></td>
+				<td class="light"><span style="color: #2E23C4">#2E23C4</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #3498DB">Blue</span></td>
+				<td class="light"><span style="color: #3498DB">#3498DB</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #6495ED">Cornflower Blue</span></td>
+				<td class="light"><span style="color: #6495ED">#6495ED</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #C2E2FF">Ice Blue</span></td>
+				<td class="light"><span style="color: #C2E2FF">#C2E2FF</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #C4C4FF">Lavender</span></td>
+				<td class="light"><span style="color: #C4C4FF">#C4C4FF</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #BF5FFF">Light Purple</span></td>
+				<td class="light"><span style="color: #BF5FFF">#BF5FFF</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #AA00FF">Purple 2</span></td>
+				<td class="light"><span style="color: #AA00FF">#AA00FF</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #7E48D9">Newcastle Purps</span></td>
+				<td class="light"><span style="color: #7E48D9">#7E48D9</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #9B59B6">Purple</span></td>
+				<td class="light"><span style="color: #9B59B6">#9B59B6</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #71368A">Dark Purple</span></td>
+				<td class="light"><span style="color: #71368A">#71368A</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #C71585">Dark Magenta</span></td>
+				<td class="light"><span style="color: #C71585">#C71585</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #AD1457">Fuschia</span></td>
+				<td class="light"><span style="color: #AD1457">#AD1457</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #FF70E8">Cold Pink</span></td>
+				<td class="light"><span style="color: #FF70E8">#FF70E8</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #FFAADD">Pinkmaster Flex</span></td>
+				<td class="light"><span style="color: #FFAADD">#FFAADD</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #FF69B4">Pink</span></td>
+				<td class="light"><span style="color: #FF69B4">#FF69B4</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #FF9999">Pale Red</span></td>
+				<td class="light"><span style="color: #FF9999">#FF9999</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #EB1E63">Crayola Red</span></td>
+				<td class="light"><span style="color: #EB1E63">#EB1E63</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #FA203F">Alizarin</span></td>
+				<td class="light"><span style="color: #FA203F">#FA203F</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #FB1F1C">Scarlet</span></td>
+				<td class="light"><span style="color: #FB1F1C">#FB1F1C</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #EC9696">Skin Tone</span></td>
+				<td class="light"><span style="color: #EC9696">EC969646E7A</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #E74C3C">Red</span></td>
+				<td class="light"><span style="color: #E74C3C">#E74C3C</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #C33C1C">Burnt Red</span></td>
+				<td class="light"><span style="color: #C33C1C">#C33C1C</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #992D22">Red-Brown</span></td>
+				<td class="light"><span style="color: #992D22">#992D22</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #A84300">Poo Brown</span></td>
+				<td class="light"><span style="color: #A84300">#A84300</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #C37155">One With The Earth</span></td>
+				<td class="light"><span style="color: #C37155">#C37155</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #DD5900">Dark Orange</span></td>
+				<td class="light"><span style="color: #DD5900">#DD5900</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #E67E22">Orange</span></td>
+				<td class="light"><span style="color: #E67E22">#E67E22</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #FFA000">Bright Orange</span></td>
+				<td class="light"><span style="color: #FFA000">#FFA000</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #F1C40F">Gold Yellow</span></td>
+				<td class="light"><span style="color: #F1C40F">#F1C40F</span></td>
+			</tr>
+			<tr>
+				<td class="dark"><span style="color: #F9E314">Yellow</span></td>
+				<td class="light"><span style="color: #F9E314">#F9E314</span></td>
 			</tr>
 		</table>
 	</body>
