--- a/colours.html
+++ b/colours.html
@@ -198,7 +198,7 @@
 			</tr>
 			<tr>
 				<td class="dark"><span style="color: #EC9696">Skin Tone</span></td>
-				<td class="light"><span style="color: #EC9696">EC969646E7A</span></td>
+				<td class="light"><span style="color: #EC9696">#EC9696</span></td>
 			</tr>
 			<tr>
 				<td class="dark"><span style="color: #E74C3C">Red</span></td>
