--- a/colours.html
+++ b/colours.html
@@ -121,8 +121,8 @@
 				<td class="light"><span style="color: #3457C7">#3457C7</span></td>
 			</tr>
 			<tr>
-				<td class="dark"><span style="color: #2E23C4">Gamma Tester</span></td>
-				<td class="light"><span style="color: #2E23C4">#2E23C4</span></td>
+				<td class="dark"><span style="color: #2F25C8">Gamma Tester</span></td>
+				<td class="light"><span style="color: #2F25C8">#2F25C8</span></td>
 			</tr>
 			<tr>
 				<td class="dark"><span style="color: #3498DB">Blue</span></td>
