--- a/colours.html
+++ b/colours.html
@@ -145,6 +145,10 @@
 				<td class="light"><span style="color: #C4C4FF">#C4C4FF</span></td>
 			</tr>
 			<tr>
+				<td class="dark"><span style="color: #7F7FFF">Blue 2</span></td>
+				<td class="light"><span style="color: #7F7FFF">#7F7FFF</span></td>
+			</tr>
+			<tr>
 				<td class="dark"><span style="color: #BF5FFF">Light Purple</span></td>
 				<td class="light"><span style="color: #BF5FFF">#BF5FFF</span></td>
 			</tr>
