--- a/colours.html
+++ b/colours.html
@@ -149,8 +149,8 @@
 				<td class="light"><span style="color: #7F7FFF">#7F7FFF</span></td>
 			</tr>
 			<tr>
-				<td class="dark"><span style="color: #C4C4FF">Dark Lavender</span></td>
-				<td class="light"><span style="color: #C4C4FF">#9C67FF</span></td>
+				<td class="dark"><span style="color: #9C67FF">Dark Lavender</span></td>
+				<td class="light"><span style="color: #9C67FF">#9C67FF</span></td>
 			</tr>
 			<tr>
 				<td class="dark"><span style="color: #BF5FFF">Light Purple</span></td>
