--- a/colours.html
+++ b/colours.html
@@ -245,6 +245,10 @@
 				<td class="light"><span style="color: #FFA000">#FFA000</span></td>
 			</tr>
 			<tr>
+				<td class="dark"><span style="color: #FFCF00">Old Yeller</span></td>
+				<td class="light"><span style="color: #FFCF00">#FFCF00</span></td>
+			</tr>
+			<tr>
 				<td class="dark"><span style="color: #F1C40F">Gold Yellow</span></td>
 				<td class="light"><span style="color: #F1C40F">#F1C40F</span></td>
 			</tr>
