--- a/colours.html
+++ b/colours.html
@@ -133,6 +133,10 @@
 				<td class="light"><span style="color: #3498DB">#3498DB</span></td>
 			</tr>
 			<tr>
+				<td class="dark"><span style="color: #006FFC">Limit Blue</span></td>
+				<td class="light"><span style="color: #006FFC">#006FFC</span></td>
+			</tr>
+			<tr>
 				<td class="dark"><span style="color: #6495ED">Cornflower Blue</span></td>
 				<td class="light"><span style="color: #6495ED">#6495ED</span></td>
 			</tr>
