--- a/colours.html
+++ b/colours.html
@@ -81,6 +81,10 @@
 				<td class="light"><span style="color: #95A5A6">#95A5A6</span></td>
 			</tr>
 			<tr>
+				<td class="dark"><span style="color: #C7DA51">Asparagus Piss</span></td>
+				<td class="light"><span style="color: #C7DA51">#C7DA51</span></td>
+			</tr>
+			<tr>
 				<td class="dark"><span style="color: #B3E86D">Lemon Lime</span></td>
 				<td class="light"><span style="color: #B3E86D">#B3E86D</span></td>
 			</tr>
