--- a/colours.html
+++ b/colours.html
@@ -121,6 +121,10 @@
 				<td class="light"><span style="color: #0CBDBE">#0CBDBE</span></td>
 			</tr>
 			<tr>
+				<td class="dark"><span style="color: #344668">Upset</span></td>
+				<td class="light"><span style="color: #344668">#344668</span></td>
+			</tr>
+			<tr>
 				<td class="dark"><span style="color: #206694">Dark Blue</span></td>
 				<td class="light"><span style="color: #206694">#206694</span></td>
 			</tr>
