--- a/colours.html
+++ b/colours.html
@@ -57,6 +57,10 @@
 				<td class="light"><span style="color: #3AC7FD">#3AC7FD</span></td>
 			</tr>
 			<tr>
+				<td class="dark"><span style="color: #5CA04D">Colour of Revan</span></td>
+				<td class="light"><span style="color: #5CA04D">#5CA04D</span></td>
+			</tr>
+			<tr>
 				<td class="dark"><span style="color: #000001">Nigerian</span></td>
 				<td class="light"><span style="color: #000001">#000001</span></td>
 			</tr>
