--- a/colours.html
+++ b/colours.html
@@ -113,7 +113,7 @@
 				<td class="light"><span style="color: #1F8B4C">#1F8B4C</span></td>
 			</tr>
 			<tr>
-				<td class="dark"><span style="color: #11806A">Turqoise</span></td>
+				<td class="dark"><span style="color: #11806A">Turquoise</span></td>
 				<td class="light"><span style="color: #11806A">#11806A</span></td>
 			</tr>
 			<tr>
