--- a/colours.html
+++ b/colours.html
@@ -193,6 +193,10 @@
 				<td class="light"><span style="color: #C71585">#C71585</span></td>
 			</tr>
 			<tr>
+				<td class="dark"><span style="color: ##C67DB5">Magenta</span></td>
+				<td class="light"><span style="color: #C67DB5">#C67DB5</span></td>
+			</tr>
+			<tr>
 				<td class="dark"><span style="color: #FF69B4">Pink</span></td>
 				<td class="light"><span style="color: #FF69B4">#FF69B4</span></td>
 			</tr>
