--- a/colours.html
+++ b/colours.html
@@ -61,6 +61,11 @@
 				<td class="light"><span style="color: #5CA04D">#5CA04D</span></td>
 			</tr>
 			<tr>
+				<td class="dark"><span style="color: #F590A4">Colour of Enn</span></td>
+				<td class="light"><span style="color: #F590A4">#F590A4</span></td>
+			</tr>
+			#f590a4
+			<tr>
 				<td class="dark"><span style="color: #000001">Nigerian</span></td>
 				<td class="light"><span style="color: #000001">#000001</span></td>
 			</tr>
