--- a/colours.html
+++ b/colours.html
@@ -64,7 +64,10 @@
 				<td class="dark"><span style="color: #F590A4">Colour of Enn</span></td>
 				<td class="light"><span style="color: #F590A4">#F590A4</span></td>
 			</tr>
-			#f590a4
+			<tr>
+				<td class="dark"><span style="color: #C7DA51">Colour of Moon</span></td>
+				<td class="light"><span style="color: #C7DA51">#C7DA51</span></td>
+			</tr>
 			<tr>
 				<td class="dark"><span style="color: #000001">Nigerian</span></td>
 				<td class="light"><span style="color: #000001">#000001</span></td>
@@ -88,10 +91,6 @@
 			<tr>
 				<td class="dark"><span style="color: #95A5A6">Lightest Grey</span></td>
 				<td class="light"><span style="color: #95A5A6">#95A5A6</span></td>
-			</tr>
-			<tr>
-				<td class="dark"><span style="color: #C7DA51">Asparagus Piss</span></td>
-				<td class="light"><span style="color: #C7DA51">#C7DA51</span></td>
 			</tr>
 			<tr>
 				<td class="dark"><span style="color: #B3E86D">Lemon Lime</span></td>
