--- a/colours.html
+++ b/colours.html
@@ -69,8 +69,8 @@
 				<td class="light"><span style="color: #C7DA51">#C7DA51</span></td>
 			</tr>
 			<tr>
-				<td class="dark"><span style="color: #000001">Nigerian</span></td>
-				<td class="light"><span style="color: #000001">#000001</span></td>
+				<td class="dark"><span style="color: #000000">Nigerian</span></td>
+				<td class="light"><span style="color: #000000">#000000</span></td>
 			</tr>
 			<tr>
 				<td class="dark"><span style="color: #546E7A">Darkest Grey</span></td>
@@ -197,7 +197,7 @@
 				<td class="light"><span style="color: #C71585">#C71585</span></td>
 			</tr>
 			<tr>
-				<td class="dark"><span style="color: ##C67DB5">Magenta</span></td>
+				<td class="dark"><span style="color: #C67DB5">Magenta</span></td>
 				<td class="light"><span style="color: #C67DB5">#C67DB5</span></td>
 			</tr>
 			<tr>
