--- a/colours.html
+++ b/colours.html
@@ -93,8 +93,8 @@
 				<td class="light"><span style="color: #95A5A6">#95A5A6</span></td>
 			</tr>
 			<tr>
-				<td class="dark"><span style="color: #B3E86D">Lemon Lime</span></td>
-				<td class="light"><span style="color: #B3E86D">#B3E86D</span></td>
+				<td class="dark"><span style="color: #A7FD51">Lemon Lime</span></td>
+				<td class="light"><span style="color: #A7FD51">#A7FD51</span></td>
 			</tr>
 			<tr>
 				<td class="dark"><span style="color: #9DF69D">Pale Green</span></td>
