--- a/colours.html
+++ b/colours.html
@@ -69,7 +69,7 @@
 				<td class="light"><span style="color: #C7DA51">#C7DA51</span></td>
 			</tr>
 			<tr>
-				<td class="dark"><span style="color: #000000">Nigerian</span></td>
+				<td class="dark"><span style="color: #000000">Noir</span></td>
 				<td class="light"><span style="color: #000000">#000000</span></td>
 			</tr>
 			<tr>
